# micromode

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: __init__.py  compare_mode_solver_fixtures.py  compare_tidy3d_backends.py  eigensolver_backend_benchmark.rs  eigensolver_benchmark_problem.rs  eigensolver_phase_benchmark.rs  micromode_backend_benchmark.py  micromode_solver_benchmark.py
benchmarks/mode_solver/: README.md  __init__.py  fixtures.py
docs/: backend-trust.md  mode-solver-methods.md  physics-model.md  release.md
examples/: README.md  material_grid_demos.py  ridge_waveguide_readme.py  soi_hybridization_sweep.py  tidy3d_modal_sources_monitors.py
fixtures/mode_solver/extended/: manifest.json
fixtures/mode_solver/extended/bend_y_radius/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/custom_cartesian_left/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/custom_cartesian_right/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/cylindrical_rod_air/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/group_index_silicon_strip/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/interp_cubic_strip/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/interp_linear_reduced/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/interp_poly_cheb_strip/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/partial_fields_subset/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/pec_parallel_plate_y/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/pml_cross_section_y/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/polyslab_sloped_sidewall/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/rib_waveguide_silicon/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/simulation_2d_te/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/slot_waveguide_silicon/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/sort_mode_area_te_filter/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/sort_n_eff_ascending/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/strip_x_lossy_double/: summary.json
fixtures/mode_solver/extended/strip_y_scalar_double_3freq/: mode_data.hdf5  summary.json
fixtures/mode_solver/extended/strip_z_scalar_single/: summary.json
fixtures/mode_solver/smoke/: manifest.json
fixtures/mode_solver/smoke/group_index_silicon_strip/: summary.json
fixtures/mode_solver/smoke/pec_parallel_plate_y/: summary.json
fixtures/mode_solver/smoke/strip_x_lossy_double/: mode_data.hdf5  summary.json
fixtures/mode_solver/smoke/strip_y_scalar_double_3freq/: summary.json
fixtures/mode_solver/smoke/strip_z_scalar_single/: mode_data.hdf5  summary.json
python/micromode/: __init__.py  _rust.py  constants.py  models.py  raster.py  result.py  scipy_reference.py  sweep.py
scripts/: check_dist_artifacts.py  check_release_metadata.py  generate_coverage_badge.py  smoke_dist.py  smoke_dist.sh  smoke_wheel.py
src/: derivatives.rs  diagonal_solver.rs  eigensolve.rs  lib.rs  mode_solver.rs  operators.rs  python_api.rs  sparse_matrix.rs
tests/: conftest.py  test_micromode_api.py  test_mode_solver_fixtures.py
