[package]
name = "micromode-core"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Rust core for the MicroMode photonics mode solver."
license = "Apache-2.0"
repository = "https://github.com/QuentinWach/micromode"
readme = "README.md"
keywords = ["fdfd", "mode-solver", "photonics", "waveguide"]
categories = ["science"]

[lib]
name = "micromode_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "eigensolver-backend-benchmark"
path = "benchmarks/eigensolver_backend_benchmark.rs"

[dependencies]
amd = "0.2"
nalgebra = "0.33"
num-complex = "0.4"
pyo3 = { version = "0.23.5", optional = true }
rlu = "0.7"

[features]
default = []
python = ["pyo3"]
extension-module = ["python", "pyo3/extension-module"]
