[project]
name = "micromode"
version = "0.1.0a1"
description = "Rust-backed photonics mode solver with a small Python API."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
authors = [{ name = "Quentin Wach" }]
maintainers = [{ name = "Quentin Wach" }]
keywords = [
  "electromagnetics",
  "fdtd",
  "fdfd",
  "mode-solver",
  "photonics",
  "waveguide",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "h5py>=3.10,<4.0",
  "matplotlib>=3.8,<4.0",
  "numpy>=2.2.6,<2.5.0",
  "xarray>=2023.08,<2026.5.0",
]

[project.urls]
Homepage = "https://github.com/QuentinWach/micromode"
Repository = "https://github.com/QuentinWach/micromode"
Issues = "https://github.com/QuentinWach/micromode/issues"
Changelog = "https://github.com/QuentinWach/micromode/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "maturin>=1.7,<2",
  "pkginfo>=1.12.1.2",
  "pytest>=8.1,<10.0.0",
  "pytest-cov>=5,<8",
  "pytest-xdist>=3.6,<4.0",
  "tomli>=2,<3; python_version < '3.11'",
  "twine>=5,<7",
]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.uv]
package = true

[tool.maturin]
module-name = "micromode._core"
python-source = "python"
features = ["extension-module", "arpack-backend", "umfpack-backend"]
auditwheel = "skip"

[tool.pytest.ini_options]
addopts = "--assert=plain"
markers = [
  "golden: committed reference fixture integrity checks",
  "slow: slow tests",
]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]
python_files = ["test_*.py"]
