[project]
name = "micromode"
version = "0.1.0a4"
description = "Rust-backed photonics mode solver with a small Python API."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
authors = [{ name = "Quentin Wach" }]
maintainers = [{ name = "Quentin Wach" }]
keywords = [
  "electromagnetics",
  "fdtd",
  "fdfd",
  "mode-solver",
  "photonics",
  "waveguide",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "h5py>=3.10,<4.0",
  "matplotlib>=3.8,<4.0",
  "numpy>=2.2.6,<2.5.0",
  "xarray>=2023.08,<2026.5.0",
]

[project.urls]
Homepage = "https://github.com/QuentinWach/micromode"
Repository = "https://github.com/QuentinWach/micromode"
Issues = "https://github.com/QuentinWach/micromode/issues"
Examples = "https://github.com/QuentinWach/micromode/tree/main/examples"
Changelog = "https://github.com/QuentinWach/micromode/blob/main/CHANGELOG.md"

[project.optional-dependencies]
scipy = [
  "scipy>=1.11,<2.0",
]
dev = [
  "maturin>=1.7,<2",
  "packaging>=24.2",
  "pkginfo>=1.12.1.2",
  "pyright>=1.1.390,<2",
  "pytest>=8.1,<10.0.0",
  "pytest-cov>=5,<8",
  "pytest-xdist>=3.6,<4.0",
  "ruff>=0.8.0,<1",
  "tomli>=2,<3",
  "twine>=5,<7",
]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.uv]
package = true

[tool.maturin]
module-name = "micromode._core"
python-source = "python"
features = ["extension-module"]
auditwheel = "skip"

[tool.pytest.ini_options]
addopts = "--assert=plain"
markers = [
  "golden: committed reference fixture integrity checks",
  "slow: slow tests",
]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["python", "tests", "scripts", "benchmarks", "examples"]
extend-exclude = ["dist", "tmp"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
include = ["python/micromode", "scripts"]
exclude = ["**/__pycache__", ".venv", "dist", "tmp"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
